# Mixture-model

./: CMakeLists.txt  Doxyfile.in
cmake/: ClasscodeConfig.cmake.in
data/: gp-classification.conf
include/Classcode/: AdaBoost.hh  BinaryClassifier.hh  BinaryClassifierWithWeights.hh  GP_Base.hh  GP_BinaryClassification.hh  GP_BinaryClassificationEP.hh  GP_Classification.hh  GP_Constants.hh  GP_CovarianceFunction.hh  GP_DataReader.hh  GP_DataSet.hh  GP_Evaluation.hh  GP_Exception.hh  GP_InputParams.hh  GP_Matrix.hh  GP_ObjectiveFunction.hh  GP_Optimizer.hh  GP_SigmoidFunction.hh  GP_UniversalDataReader.hh  GP_Vector.hh  Thresholding.hh
mixturemodels/: clustering.cc  gp-classification.cc
src/: GP_Evaluation.cc  GP_Exception.cc  GP_InputParams.cc  GP_Matrix.cc  GP_Optimizer.cc  GP_SigmoidFunction.cc  GP_Vector.cc  Thresholding.cc
